# emd

./: .gitignore  Cargo.toml  README.md  mods.toml
src/: config.rs  emd_state.rs  main.rs
src/sources/: github.rs  mod.rs  modrinth.rs
